Improvement to QC scripts Added -L switch to find in samplist/rsem/qc scripts to traverse symlink directiories Fixes on gemma scripts